--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     
     "start":"nodemon build/src/index.js",
-    "postinstall": "tsc",
-    "watch-node": "nodemon dist/index.js",
-    "watch-ts": "tsc -w",
-    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+    "build":"tsc" 
   },
   "keywords": [],
   "author": "",
@@ -18,8 +15,6 @@
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "mv": "^2.1.1",
-    "odbc": "^2.4.1",
     "pg": "^8.5.1"
   },
   "dependencies": {
