--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.13"
+    
+  },
+  "dependencies": {
+    "nodemon": "^2.0.15",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "pg": "^8.5.1"
-  },
-  "dependencies": {
-    "nodemon": "^2.0.15"
   }
 }
