--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     
-    "start":"nodemon app/index.js"
+    "start":"nodemon build/index.js"
   },
   "keywords": [],
   "author": "",
