--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "firebirdnode",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts", 
+  "scripts": {
+    "start": "npx tsc -w",
+    "dev": "npx nodemon" 
+  },
   "engines": {
     "node": "14.18.1"
-  },
-  "scripts": {
-    
-    "start":"nodemon build/index.js"
   },
   "keywords": [],
   "author": "",
