--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "firebirdnode",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts", 
+  "main": "src/index.ts",
   "scripts": {
     "start": "npx tsc -w",
-    "dev": "npx nodemon" 
+    "dev": "npx nodemon"
   },
   "engines": {
     "node": "14.18.1"
@@ -15,17 +15,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "nodemon": "^2.0.15",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "pg": "^8.5.1",
-    "mv": "^2.1.1"
+    "mv": "^2.1.1",
+    "nodemon": "^2.0.15",
+    "pg": "^8.5.1"
   },
   "dependencies": {
-    "nodemon": "^2.0.15",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "mv": "^2.1.1",
+    "nodemon": "^2.0.15",
     "pg": "^8.5.1",
-    "mv": "^2.1.1"
+    "ts-node": "^10.4.0"
   }
 }
