--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.2",
     "mv": "^2.1.1",
     "nodemon": "^2.0.15",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "odbc": "^2.4.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "mv": "^2.1.1",
     "nodemon": "^2.0.15",
     "pg": "^8.5.1",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "odbc": "^2.4.1"
   }
 }
